styles.css
/* import google font */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');


:root {
    --main-text-color: rgb(244,246,249);
    --header-bg-color: rgb(27,31,36);
    --main-bg-color: rgb(63,73,236);
    --main-text-font: 'Open Sans', sans-serif;
}

body {
    background-color: var(--main-bg-color);
    margin: 0;
}

#nav-box {
    background-color: var(--header-bg-color);
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    width: 100vw;
}

#company {
    color: var(--main-text-color);
    font-family: var(--main-text-font);
    margin-right: 80px;
    margin-left: 20px;
    transition: all 0.3s ease;
}
/* ruleset to make the elements clickable */
#company:hover {
    cursor: pointer;
    text-shadow: 6px 6px 6px var(--main-bg-color);
}

#sign-out {
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
    border-radius: 5%;
    padding: 10px;
    border: none;
    font-family: var(--main-text-font);
    margin-left: auto;
    margin-right: 30px;
}
#sign-out:hover {
    cursor: pointer;
}

#sub-number {
    width: 8px;
    height: 8px;
    border-radius: 50%;
    padding: 5px;
    background-color: var(--main-bg-color);
    display: flex;
    align-items: center;
    margin: 0;
}

#messages {
    margin-right: 4px;
}

#three {
    font-family: var(--main-text-font);
    color: var(--main-text-color);
    font-size: 12px;
}

#sales {
    text-align: left;
    font-size: 35px;
    margin-top: 40px;
    color: var(--main-text-color);
    font-family: var(--main-text-font);
}

#filter-box {
    display: flex;
    flex-direction: column;
}

#filter-by {
    color: var(--main-text-color);
    font-family: var(--main-text-font);
}

#top-row {
    background-color: rgb(27,31,36);
    padding: 15px;
}

#top-sales {
    white-space: normal;
}

#sales-header:hover {
    cursor: pointer;
}

#top-sales:hover {
    cursor: pointer;
}

#table-box {
    width: 100%;
}

.nav-elements {
    color: var(--main-text-color);
    font-family: var(--main-text-font);
    margin-right: 40px;
    transition: all 0.3s ease;
}
.nav-elements:hover {
    cursor: pointer;
    text-shadow: 6px 6px 6px var(--main-bg-color);
}

.grid-container {
    display: grid;
    grid-template-columns: auto auto auto;
    padding: 10px;
    width: 75%;
    margin-left: auto;
    margin-right: auto;
  }

.grid-item {
    background-color: red;
}

input {
    margin-left: 6%;
}

serif {
  font-size: 16px;
  font-weight: 400;
  text-rendering: optimizeLegibility;
}

div.table-title {
  padding:5px;
  width: 600px;
  margin: auto;
}

.table-title h3 {
   color: #fafafa;
   font-size: 30px;
   font-weight: 400;
   font-style:normal;
   font-family: "Roboto", helvetica, arial, sans-serif;
   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
   text-transform:uppercase;
}


/*** Table Styles **/

.table-fill {
  background: white;
  border-radius:3px;
  border-collapse: collapse;
  height: 320px;
  padding:5px;
  width: 50%;
  margin: auto;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
  animation: float 5s infinite;
}
 
th {
  color:#D5DDE5;;
  background:#1b1e24;
  border-bottom:4px solid #9ea7af;
  border-right: 1px solid #343a45;
  font-size:23px;
  font-weight: 100;
  padding:24px;
  text-align:left;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  vertical-align:middle;
}

th:first-child {
  border-top-left-radius:3px;
}
 
th:last-child {
  border-top-right-radius:3px;
  border-right:none;
}
  
tr {
  border-top: 1px solid #C1C3D1;
  border-bottom: 1px solid #C1C3D1;
  color:#666B85;
  font-size:16px;
  font-weight:normal;
  white-space: nowrap;
  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
}
 
tr:hover td {
  background:#4E5066;
  color:#FFFFFF;
  border-top: 1px solid #22262e;
}
 
tr:first-child {
  border-top:none;
}

tr:last-child {
  border-bottom:none;
}
 
tr:nth-child(odd) td {
  background:#EBEBEB;
}
 
tr:nth-child(odd):hover td {
  background:#4E5066;
}

tr:last-child td:first-child {
  border-bottom-left-radius:3px;
}
 
tr:last-child td:last-child {
  border-bottom-right-radius:3px;
}
 
td {
  background:#FFFFFF;
  padding:20px;
  text-align:left;
  vertical-align:middle;
  font-weight:300;
  font-size:18px;
  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
  border-right: 1px solid #C1C3D1;
}

td:last-child {
  border-right: 0px;
}

th.text-right {
    font-weight: bold;
    font-family: var(--main-text-font);
}

th.text-left {
  text-align: left;
}

th.text-center {
  text-align: center;
}

td.text-left {
  text-align: left;
  white-space: nowrap;
  color: black;
}

td.text-center {
  text-align: center;
}

td.text-right {
  text-align: right;
}

td.text-left {
    font-family: var(--main-text-font);
}

tr.text-right {
text-align: center;
}

/* Mobile compatibility for most devices */
@media all and (max-width: 699px) {
    

    #nav-box {
        flex-wrap: wrap;
        width: 100%;
        justify-content: flex-end;
        padding: 10px;
    }

    #company {
        /* putting it in the center, and putting 
        everything underneath it with the width 100 */
        font-size: x-large;
        margin-right: 50%;
        margin-left: 50%; 
        width: 100%;
    }

    /* Bringing these elements closer together by reducing 
    their margin */
    #sign-out {
        margin-left: 5px;
    }

    #sales {
        text-align: left;
        margin-left: 10px;
        margin-top: 20px;
        color: var(--main-text-color);
        font-family: var(--main-text-font);
    }

    #filter-by {
        margin-left: 10px;
    }

    #top-sales {
        font-size: 15px;
    }

    #table-box {
        width: 100%;
    }

    div.table-title {
        margin: 0;
        width: 322px;
    }

    .text-left {
        font-size: 15px;
        color: var(--header-bg-color);
    }

    .nav-elements {
        margin: 10px;
    }

    input {
        margin-left: 5px;
    }

}

